// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTypeDetails should handle nested CType 1`] = `
"<section class="_container_lf0xe_1">
  <h1 class="title">Example nested CType</h1>

  <dl>
    <dt>Creator:</dt>
    <dd>did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</dd>

    <dt>Description:</dt>
    <dd>This is an example of a CType with a nested CType</dd>

    <dt id="/properties/example">Property 1:</dt>
    <dd><a href="/kilt:ctype:0x1">example</a></dd>

    <dt id="/properties/hasNestedCType">Property 2:</dt>
    <dd>hasNestedCType</dd>

    <div class="indent">
      <dt>Type:</dt>
      <dd>boolean</dd>
    </div>

    <dt>Creation date:</dt>
    <dd>5/1/2023, 12:00:00 PM</dd>

    <dt>Extrinsic:</dt>
    <dd>
      <a href="https://example.subscan.io/extrinsic/0xexamplehash">
        0xexamplehash
      </a>
    </dd>

    <dt>
      <a class="showDetails" href="#details">Technical Details:</a>
    </dt>

    <dd id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0x1692376199a5a74445bec96882d2d0313042d445906e6faa21f30949150a3779&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0x1&quot;
    },
    &quot;hasNestedCType&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example nested CType&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre
      >
    </dd>
  </dl>
</section>
"
`;

exports[`CTypeDetails should handle nested CType property 1`] = `
"<section class="_container_lf0xe_1">
  <h1 class="title">Example nested CType property</h1>

  <dl>
    <dt>Creator:</dt>
    <dd>did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</dd>

    <dt>Description:</dt>
    <dd>This is an example of a CType with a nested property</dd>

    <dt id="/properties/example">Property 1:</dt>
    <dd><a href="/kilt:ctype:0x1#/properties/example">example</a></dd>

    <dt id="/properties/hasNestedProperty">Property 2:</dt>
    <dd>hasNestedProperty</dd>

    <div class="indent">
      <dt>Type:</dt>
      <dd>boolean</dd>
    </div>

    <dt>Creation date:</dt>
    <dd>5/1/2023, 12:00:00 PM</dd>

    <dt>Extrinsic:</dt>
    <dd>
      <a href="https://example.subscan.io/extrinsic/0xexamplenestedhash">
        0xexamplenestedhash
      </a>
    </dd>

    <dt>
      <a class="showDetails" href="#details">Technical Details:</a>
    </dt>

    <dd id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0x9775780b45911ece6e960dcc3eb630ea1579988d0b58c1ee2a19e2b14eeb9904&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0x1#/properties/example&quot;
    },
    &quot;hasNestedProperty&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example nested CType property&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre
      >
    </dd>
  </dl>
</section>
"
`;

exports[`CTypeDetails should match snapshot 1`] = `
"<section class="_container_lf0xe_1">
  <h1 class="title">Example CType</h1>

  <dl>
    <dt>Creator:</dt>
    <dd>did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</dd>

    <dt>Description:</dt>
    <dd>This is some example cType data</dd>

    <dt id="/properties/example">Property 1:</dt>
    <dd>example</dd>

    <div class="indent">
      <dt>Type:</dt>
      <dd>string</dd>
    </div>
    <dt id="/properties/isExample">Property 2:</dt>
    <dd>isExample</dd>

    <div class="indent">
      <dt>Type:</dt>
      <dd>boolean</dd>
    </div>

    <dt>Creation date:</dt>
    <dd>5/1/2023, 12:00:00 PM</dd>

    <dt>Extrinsic:</dt>
    <dd>
      <a href="https://example.subscan.io/extrinsic/0xexamplehash">
        0xexamplehash
      </a>
    </dd>

    <dt>
      <a class="showDetails" href="#details">Technical Details:</a>
    </dt>

    <dd id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0xf3b3e856755acaa7f274a15b99baf636a306a2a96e1c324a8cbb12b0bc1716af&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;type&quot;: &quot;string&quot;
    },
    &quot;isExample&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example CType&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre
      >
    </dd>
  </dl>
</section>
"
`;
